first build berandapage

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -29,7 +29,18 @@
       </ul>
     </nav>
   </header>
-  <main id="mainContent"></main>
+  <div class="hero" id="hero">
+    <div class="overlay">
+      <h2 tabindex="0">Green Sustainify Education</h2>
+    </div>
+  </div>
+  <main id="mainContent">
+    <article></article>
+    <article></article>
+    <article></article>
+    <article></article>
+    <article></article>
+  </main>
   <footer>
   </footer>
 </body>
