--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -127,127 +127,28 @@ body {
 /*
   Main Content
 */
- 
-main {
-  padding: 32px;
-  flex: 1;
-}
- 
-.content {
-  margin: 0 auto;
-  min-height: 100%;
-}
- 
-.content .content__heading {
-  font-weight: normal;
-}
- 
- 
-/*
-  Movies
-*/
- 
-.movies {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 16px;
-  margin: 32px 0;
-}
- 
- 
-/*
-  Movie Item
-*/
- 
-.movie-item {
-  width: 100%;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  border-radius: 8px;
-  overflow: hidden;
-}
- 
-.movie-item__header {
-  position: relative;
-}
- 
-.movie-item .movie-item__header .movie-item__header__poster {
+.hero {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url('../public/images/image_1.png'); 
+  background-size: cover;
+  background-position: center;
+  min-height: 380px;
   width: 100%;
 }
- 
-.movie-item .movie-item__header .movie-item__header__rating {
-  position: absolute;
-  padding: 8px;
-  bottom: 20px;
-  left: 0;
-  display: inline-block;
-  background-color: black;
-  color: white;
-}
- 
-.movie-item .movie-item__header .movie-item__header__rating .movie-item__header__rating__score {
-  margin-left: 10px;
-}
- 
-.movie-item .movie-item__content {
-  padding: 16px;
-}
- 
-.movie-item .movie-item__content h3 {
-  margin: 0 0 10px 0;
-}
- 
-.movie-item .movie-item__content h3 a {
-  color: #db0000;
-  text-decoration: none;
-}
- 
-.movie-item .movie-item__content p {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 4; /* number of lines to show */
-  -webkit-box-orient: vertical;
-}
- 
- 
-/*
-  Movie
-*/
- 
-.movie {
-  margin: 0 auto;
+
+.overlay {
+  position: unset;
   width: 100%;
-  max-width: 800px;
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 18px 16px;
+  height: 380px;
+  background-color: #560000ab;
 }
- 
-.movie .movie__poster {
-  width: 100%;
-  max-width: 400px;
-}
- 
-.movie .movie__info h4 {
-  margin: 8px 0;
-}
- 
- 
- 
-/*
-  Footer
-*/
- 
-footer {
-  padding: 16px;
-}
- 
-footer p {
+.hero h2 {
+  padding: 5rem;
   text-align: center;
-  color: #aaaaaa;
-}
- 
-footer p a {
-  color: #db0000;
-  text-decoration: none;
+  position: unset;
+  color: #fff;
+  padding-top: 10rem;
+  
 }
