--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -37,6 +37,7 @@
   <main id="mainContent">
   </main>
   <footer>
+    <h3>Copyright © 2024 - Green Sustainify </h3>
   </footer>
 </body>
 </html>
