--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -128,6 +128,7 @@ body {
   Hero
 */
 .hero {
+  margin-top: -2rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -151,4 +152,204 @@ body {
   color: #fff;
   padding-top: 10rem;
   
+}
+
+/*
+beranda
+*/
+body {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+main{
+  display: flex;
+  flex-direction: column;
+  gap: 5rem;
+}
+article{
+    display: flex;
+    flex-direction: column;
+    padding: 0 180px;
+    justify-content: center;
+    gap: 5rem;
+    
+}
+.about {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.aboutImg img{
+  width: 300px;
+  height: 200px;
+}
+
+.aboutDescription {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem ;
+}
+
+.aboutDescription p{
+  text-align: justify;
+}
+.aboutDescription button{
+  box-shadow: 0px 8px 4px 0px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+  background: #19B81F;
+  position: relative;
+  width: 150px;
+  height: 30px;
+  box-sizing: border-box;
+}
+
+.aboutWe{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.aboutWe h2{
+  display: flex;
+  justify-content: center;
+}
+
+.aboutWe p{
+  text-align: justify;
+}
+/*galeri*/
+.galeri{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem ;
+}
+.galeri h2{
+  display: flex;
+  justify-content: center;
+}
+.cards-project {
+  gap: 1rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.cards-project img {
+  width: 20rem;
+}
+
+.cards-project .card {
+  border: 1px #000 solid;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+}
+.card-body {
+  display: flex;
+  flex-direction: column;
+  font-size: 12px;
+  padding: 1rem 1rem;
+  gap: 1rem;
+}
+
+.card h3 {
+  display: flex;
+  justify-content: center;
+}
+
+/*jOIN*/
+
+.join{
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  flex-direction: column;
+}
+
+.join h2{
+  display: flex;
+  justify-content: center;
+}
+
+.join button {
+  box-shadow: 0px 8px 4px 0px rgba(0, 0, 0, 0.25);
+  border-radius: 12px;
+  background: #19B81F;
+  position: relative;
+  margin-right: 38px;
+  padding: 21px 21.1px 22px 21.1px;
+  width: 222px;
+  box-sizing: border-box;
+}
+.join button a{
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 22px;
+}
+
+.button{
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+
+/* Artikel*/
+
+.artikel{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+
+.artikels {
+  gap: 1rem;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+
+}
+
+.artikels img {
+  width: 222px;
+}
+
+.listartikel{
+  border: 1px #000 solid;
+}
+
+.artikel {
+  display: flex;
+  flex-direction: column;
+}
+.artikel-body {
+  display: flex;
+  flex-direction: column;
+  font-size: 12px;
+  padding: 1rem 1rem;
+  gap: 1rem;
+}
+
+.artikel h3 {
+  display: flex;
+  justify-content: center;
+}
+
+
+/*Footer*/
+footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #19B81F;
+  color: #fff;
+  height: 6rem;
 }
