--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -24,6 +24,7 @@
         <li><a href="#/beranda">Beranda</a></li>
         <li><a href="#/daftar-artikel">Artikel</a></li>
         <li><a href="#/donasi">Donasi</a></li>
+        <li><a href="#/gallery">Gallery</a></li>
         <li><a href="#/kontak">Kontak</a></li>
         <li><a href="#/login" class="navbar-login">Login</a></li>
       </ul>
