--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -224,11 +224,11 @@ article{
 .galeri{
     display: flex;
     flex-direction: column;
-    gap: 1rem ;
+    gap: 1.5rem ;
 }
 .galeri h2{
   display: flex;
-  justify-content: center;
+  justify-content: start;
 }
 .cards-project {
   gap: 1rem;
