--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -380,3 +380,25 @@ footer{
 .detailAboutDescription{
   text-align: justify;
 }
+
+
+/* Detail Galeri */
+.detailGallery{
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.detailGalleryImg{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.detailGallery img{
+  width: 600px;
+  height: 360px;
+  display: flex;
+  justify-items: center;
+}
