update page beranda

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -22,8 +22,8 @@
     <nav id="navigationDrawer" class="app-bar__navigation">
       <ul>
         <li><a href="#/beranda">Beranda</a></li>
+        <li><a href="/#aboutwe">Tentang Kami</a></li>
         <li><a href="#/gallery">Gallery</a></li>
-        <li><a href="#/donasi">Donasi</a></li>
         <li><a href="#/kontak">Kontak</a></li>
         <li><a href="#/login" class="navbar-login">Login</a></li>
       </ul>
