--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -71,7 +71,11 @@
       justify-content: center;
       align-items: center;
     }
-    .artikels{
-      justify-content: center;
+  }
+  @media screen and (max-width: 390px){
+    .cards-project{
+      display: grid;
+      grid-template-columns: 1fr 1fr;
     }
+
   }
