--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -47,7 +47,7 @@ body {
 }
  
 .app-bar .app-bar__brand h1 {
-  color: #9BCF53;
+  color: #19B81F;
   text-transform: uppercase;
   font-size: 22px;
   user-select: none;
@@ -71,7 +71,7 @@ body {
   text-decoration: none;
   background-color: #ffffff;
   z-index: 1;
-  color: #9BCF53;
+  color: #19B81F;
   border-radius: 3px;
   position: relative;
   display: inline-block;
@@ -80,7 +80,7 @@ body {
   padding: 10px 10px 10px 10px;
 }
 .app-bar .app-bar__navigation ul li a::after{
-  background-color: #9BCF53;
+  background-color: #19B81F;
   content: "";
   width: 100%;
   height: 0;
@@ -184,12 +184,14 @@ article{
 .aboutImg img{
   width: 300px;
   height: 200px;
+  border-radius: 16px;
 }
 
 .aboutDescription {
   display: flex;
   flex-wrap: wrap;
   gap: 1rem ;
+  font-size: 12px;
 }
 
 .aboutDescription p{
@@ -203,6 +205,12 @@ article{
   width: 150px;
   height: 30px;
   box-sizing: border-box;
+}
+
+.aboutDescription button a{
+  text-decoration: none;
+  color: white;
+  font-size: 12px;
 }
 
 .aboutWe{
@@ -219,6 +227,7 @@ article{
 
 .aboutWe p{
   text-align: justify;
+  font-size: 12px;
 }
 /*galeri*/
 .galeri{
@@ -228,7 +237,7 @@ article{
 }
 .galeri h2{
   display: flex;
-  justify-content: start;
+  justify-content: center;
 }
 .cards-project {
   gap: 1rem;
@@ -259,7 +268,10 @@ article{
   padding: 1rem 1rem;
   gap: 1rem;
 }
-
+.card-body p {
+  display: flex;
+  flex-wrap: wrap;
+}
 .card h3 {
   display: flex;
   justify-content: center;
