update page beranda

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -22,6 +22,7 @@
     <nav id="navigationDrawer" class="app-bar__navigation">
       <ul>
         <li><a href="#/beranda">Beranda</a></li>
+        <li><a href="#/daftar-artikel">Artikel</a></li>
         <li><a href="/#aboutwe">Tentang Kami</a></li>
         <li><a href="#/kontak">Kontak</a></li>
         <li><a href="#/login" class="navbar-login">Login</a></li>
@@ -36,7 +37,25 @@
   <main id="mainContent">
   </main>
   <footer>
-    <h3>Copyright © 2024 - Green Sustainify </h3>
+    <div class="footerImg">
+      <img src="" alt="">
+    </div>
+    <div class="nama">
+      <p></p>
+      <p></p>
+      <p></p>
+    </div>
+    <div class="contact">
+      <p></p>
+      <p></p>
+      <p></p>
+    </div>
+    <div class="followUs">
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
+    </div>
   </footer>
 </body>
 </html>
