--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -38,23 +38,22 @@
   </main>
   <footer>
     <div class="footerImg">
-      <img src="" alt="">
+      <img src="icons/icon-72x72.png" alt="">
     </div>
     <div class="nama">
-      <p></p>
-      <p></p>
-      <p></p>
+      <h4><strong>Capstone Project</strong></h4>
+      <p>Muhammad fikriansyah J.P</p>
+      <p>Rendi sutendi</p>
+      <p> Ericho wicaksono</p>
     </div>
     <div class="contact">
-      <p></p>
-      <p></p>
-      <p></p>
+      <h4><strong>Contact</strong></h4>
+      <p>rendisutendi10@gmail.com</p>
     </div>
     <div class="followUs">
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
+      <h4><strong>Cari tahu tentang kami !</strong></h4>
+      <p>Follow Us</p>
+ 
     </div>
   </footer>
 </body>
