--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,8 +7,15 @@
     <link rel="icon" href="./favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="manifest" href="./app.webmanifest">
-
-   
+    <link
+    href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet"
+    />
+    <script
+    src="https://kit.fontawesome.com/f5ed80d948.js"
+    crossorigin="anonymous"
+    ></script>
+    <script src="https://use.fontawesome.com/b070c8f1df.js"></script>
     <title>Green Sustainify Apps</title>
   </head>
 <body>
@@ -37,10 +44,12 @@
   <main id="mainContent">
   </main>
   <footer>
-    <div class="footerImg">
-      <img src="icons/icon-72x72.png" alt="">
-    </div>
-    <div class="nama">
+    <div class="atas">
+
+      <div class="footerImg">
+        <img src="favicon2.png" alt="">
+      </div>
+      <div class="nama">
       <h4><strong>Capstone Project</strong></h4>
       <p>Muhammad fikriansyah J.P</p>
       <p>Rendi sutendi</p>
@@ -51,9 +60,18 @@
       <p>rendisutendi10@gmail.com</p>
     </div>
     <div class="followUs">
-      <h4><strong>Cari tahu tentang kami !</strong></h4>
+      <h4><strong>INGIN BERGABUNG MENJADI
+        VOLUNTEER KAMI?</strong></h4>
       <p>Follow Us</p>
- 
+      <div class="icon">
+        <i class="fab fa-github"></i>
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-instagram"></i>
+      </div>
+    </div>
+  </div>
+    <div class="bawah">
+      <h4>Copyright © 2024 - Green Sustainify </h4>
     </div>
   </footer>
 </body>
