--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -179,6 +179,7 @@ article{
 .about {
   display: flex;
   justify-content: center;
+  flex-direction: row;
   gap: 1rem;
 }
 
@@ -501,4 +502,48 @@ footer .bawah{
   height: 360px;
   display: flex;
   justify-items: center;
+}
+
+/*Daftar Artikel*/
+.lokasi{
+  border: solid 1px black;
+  border-radius: 3px;
+  margin: 0 0 1.8rem 0.9rem;
+  padding: 0.6rem 1rem 0.3rem 1rem;
+
+}
+.lokasi p a{
+  text-decoration: none;
+  color: black;
+}
+section{
+  margin-left: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.artikelList{
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+.artikelList img{
+  width: 304px;
+  height: 200px;
+  border-radius: 20px;
+}
+.textArtikel{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.textArtikel p{
+  font-size: 14px;
+  text-align: justify;
+}
+.textArtikel a{
+  text-decoration: none;
+  color: green;
 }
