--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -30,8 +30,7 @@
       <ul>
         <li><a href="#/beranda">Beranda</a></li>
         <li><a href="#/daftar-artikel">Artikel</a></li>
-        <li><a href="/#aboutwe">Tentang Kami</a></li>
-        <li><a href="#/kontak">Kontak</a></li>
+        <li><a href="#/daftar-gallery">Gallery</a></li>
         <li><a href="#/login" class="navbar-login">Login</a></li>
       </ul>
     </nav>
