--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -179,6 +179,7 @@ article{
 .about {
   display: flex;
   justify-content: center;
+  flex-direction: row;
   gap: 1rem;
 }
 
@@ -284,6 +285,7 @@ article{
   height: auto;
 }
 .card-body {
+  border-top: solid 1px #000;
   display: flex;
   flex-direction: column;
   font-size: 12px;
@@ -297,10 +299,11 @@ article{
   overflow: auto;
   white-space: normal;
   text-align: justify;
+  font-size: 12px;
 }
 .card h3 {
   display: flex;
-  justify-content: center;
+  font-size: 12px;
 }
 
 /*jOIN*/
@@ -347,6 +350,7 @@ article{
 .artikel{
   display: flex;
   flex-direction: column;
+  height: auto;
   gap: 1rem;
 }
 
@@ -355,8 +359,7 @@ article{
   gap: 1rem;
   width: 100%;
   display: flex;
-  flex-wrap: wrap;
-
+  justify-content: center;
 }
 
 .artikels img {
@@ -367,13 +370,6 @@ article{
 .listartikel{
   border: 1px #000 solid;
   width: 200px;
-}
-
-.artikel {
-  display: flex;
-  flex-direction: column;
-  width: 10rem;
-  height: auto;
 }
 .artikel-body {
   display: flex;
@@ -400,11 +396,66 @@ article{
 /*Footer*/
 footer{
   display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #19B81F;
+  flex-direction: column;
+}
+footer .atas{
+  background-color: #3E593D;
   color: #fff;
-  height: 6rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  height: auto;
+  padding: 20px;
+}
+footer .footerImg{
+    display: flex;
+    align-items: center;
+    margin-left: 30px;
+}
+footer .footerImg img{
+  width: 50%  ;
+}
+
+footer .nama{
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  font-size: 12px;
+  margin-bottom: 10px;
+  
+}
+footer .contact {
+  font-size: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+footer .followUs{
+  font-size: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+footer .bawah{
+  background-color: #062701;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  padding-block: .5rem;
+  width: 100%;
+}
+.icon{
+  display: flex;
+  gap: 1rem;
+  justify-content: start;
+}
+.followUs .icon i {
+  margin-top: 10px;
+  font-size: 30px;
 }
 
 
@@ -431,7 +482,7 @@ footer{
 }
 
 
-/* Detail Galeri */
+/* Halaman Detail Galeri */
 .detailGallery{
   display: flex;
   flex-direction: column;
@@ -450,4 +501,58 @@ footer{
   height: 360px;
   display: flex;
   justify-items: center;
+}
+
+/*Halaman Daftar Artikel*/
+.lokasi{
+  border: solid 1px black;
+  border-radius: 3px;
+  margin: 0 0 1.8rem 0.9rem;
+  padding: 0.6rem 1rem 0.3rem 1rem;
+
+}
+.lokasi p a{
+  text-decoration: none;
+  color: black;
+}
+.daftarArtikel{
+  margin-top: -80px;
+  margin-left: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.artikelList{
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+.artikelList img{
+  width: 304px;
+  height: 200px;
+  border-radius: 20px;
+}
+.textArtikel{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.textArtikel p{
+  font-size: 14px;
+  text-align: justify;
+}
+.textArtikel a{
+  text-decoration: none;
+  color: green;
+}
+
+/*Halaman Daftar Gallery*/
+
+.daftar-galeri{
+  margin-left: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
