--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -346,51 +346,62 @@ article{
 
 
 /* Artikel*/
-
-.artikel{
-  display: flex;
-  flex-direction: column;
-  height: auto;
-  gap: 1rem;
+.article{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem ;
 }
-
-
-.artikels {
+.article h2{
+  display: flex;
+  justify-content: start;
+}
+.article-list {
   gap: 1rem;
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: start;
+  flex-wrap: wrap;
 }
 
-.artikels img {
+.article-list img {
   width: 200px;
   height: 150px;
 }
 
-.listartikel{
+.article-list .card-article {
   border: 1px #000 solid;
   width: 200px;
+  height: auto;
 }
-.artikel-body {
+
+.card-article {
+  display: flex;
+  flex-direction: column;
+  width: 10rem;
+  height: auto;
+}
+.card-article-body {
+  border-top: solid 1px #000;
   display: flex;
   flex-direction: column;
   font-size: 12px;
   padding: 1rem 1rem;
   gap: 1rem;
 }
-.artikel-body p {
+.card-article-body p {
   display: flex;
   flex-wrap: wrap;
   max-height: 100px;
   overflow: auto;
   white-space: normal;
   text-align: justify;
+  font-size: 12px;
+}
+.card-article h3 {
+  display: flex;
+  font-size: 12px;
 }
 
-.artikel h3 {
-  display: flex;
-  justify-content: center;
-}
 
 
 /*Footer*/
@@ -522,10 +533,14 @@ footer .bawah{
   flex-direction: column;
   gap: 2rem;
 }
-
-.artikelList{
+.article-body{
   display: flex;
   flex-direction: row;
+  gap: 2rem;
+}
+.artikelList{
+  display: flex;
+  flex-direction: column;
   gap: 1rem;
 }
 
