--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -19,59 +19,9 @@
     <title>Green Sustainify Apps</title>
   </head>
 <body>
-  <header class="app-bar">
-    <div class="app-bar__menu">
-      <button id="hamburgerButton">☰</button>
-    </div>
-    <div class="app-bar__brand">
-      <h1>Green Sustainify</h1>
-    </div>
-    <nav id="navigationDrawer" class="app-bar__navigation">
-      <ul>
-        <li><a href="#/beranda">Beranda</a></li>
-        <li><a href="#/daftar-artikel">Artikel</a></li>
-        <li><a href="#/daftar-gallery">Gallery</a></li>
-        <li><a href="#/login" class="navbar-login">Login</a></li>
-      </ul>
-    </nav>
-  </header>
-  <div class="hero" id="hero">
-    <div class="overlay">
-      <h2 tabindex="0">Green Sustainify Education</h2>
-    </div>
-  </div>
+  <my-navbar></my-navbar>
   <main id="mainContent">
   </main>
-  <footer>
-    <div class="atas">
-
-      <div class="footerImg">
-        <img src="favicon2.png" alt="">
-      </div>
-      <div class="nama">
-      <h4><strong>Capstone Project</strong></h4>
-      <p>Muhammad fikriansyah J.P</p>
-      <p>Rendi sutendi</p>
-      <p> Ericho wicaksono</p>
-    </div>
-    <div class="contact">
-      <h4><strong>Contact</strong></h4>
-      <p>rendisutendi10@gmail.com</p>
-    </div>
-    <div class="followUs">
-      <h4><strong>INGIN BERGABUNG MENJADI
-        VOLUNTEER KAMI?</strong></h4>
-      <p>Follow Us</p>
-      <div class="icon">
-        <i class="fab fa-github"></i>
-        <i class="fab fa-facebook"></i>
-        <i class="fab fa-instagram"></i>
-      </div>
-    </div>
-  </div>
-    <div class="bawah">
-      <h4>Copyright © 2024 - Green Sustainify </h4>
-    </div>
-  </footer>
+<my-footer></my-footer>
 </body>
 </html>
