--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -53,26 +53,7 @@
   }
   }
   
-  @media screen and (max-width: 750px){
-    article{
-      display: flex;
-      flex-direction: column;
-      padding: 0 30px;
-      justify-content: center;
-      gap: 5rem;
-    }
-    .cards-project{
-      display: flex;
-      flex-wrap: wrap;
-    }
-    .join .button{
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
-  }
-  @media screen and (max-width: 490px) {
+  @media screen and (max-width: 649px){
     my-navbar{
       width: 100%;
     } 
@@ -81,7 +62,7 @@
     }
     article{
       width: 100%;
-      padding: 0 20px;
+      padding: 0 0;
     }
     .about{
       flex-direction: column;
@@ -126,3 +107,97 @@
       justify-content: center;
     }
   }
+  @media screen and (max-width: 390px) {
+    my-navbar{
+      width: 100%;
+    } 
+    main{
+      width: 100%;
+    }
+    article{
+      width: 100%;
+      padding: 0 0;
+    }
+    .about{
+      flex-direction: column;
+    }
+    .aboutImg{
+      display: flex;
+      justify-content: center;
+      width: 100%;
+    }
+    .aboutDescription{
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+      font-size: 12px;
+      padding: 0 25px;
+    }
+    .aboutWe {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      padding: 0px;
+  }
+  .bg-join {
+    box-shadow: 0rem 0.3rem 0.3rem 0rem rgba(0, 0, 0, 0.25);
+    border-radius: 0.8rem;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    border: solid 1px black;
+    background-color: whitesmoke;
+    height: 200px;
+    width: 100%; /* Ensure the width takes up the full available space */
+    max-width: 400px; /* Optional: Set a max width if desired */
+    margin: 0 auto; /* Center the element horizontally */
+  }
+  
+  
+    my-footer{
+      width: 100%;
+    }
+    .article-list{
+      justify-content: center;
+    }
+  }
+
+  /*Halaman Detail */
+  @media screen and (max-width: 390px) {
+    article{
+      padding: 0px 0px;
+    }
+    .detailImg{
+      display: flex;
+      justify-content: center;
+    }
+    .detailImg img{
+      width: 300px;
+      height: 100%;
+    }
+    .detailAboutDescription{
+      padding: 0px 20px;
+    }
+    
+  }
+
+  /*Halaman Artikel*/
+  @media screen and (max-width: 390px) {
+    article{
+      padding: 0px 0px;
+    }
+    .article-body{
+      padding: 0px 20px;
+      justify-content: center;
+      flex-direction: column;
+    }
+    .artikelList img {
+     width: 90%;
+     height: 90%;
+      border-radius: 20px;
+      justify-content: center;
+  }
+  }
+
+
+  
